@@ -2,6 +2,7 @@
  &INPUT
    prefix = 'gold'
    postfix = '_WanT'
+   work_dir = './SCRATCH'
    fileout = 'dos_Au.dat'
    nk(1) = 1
    nk(2) = 1
