@@ -1,8 +1,7 @@
 &inputpp
   prefix='gold'
-  outdir='./'
-  ascii = .FALSE.
-  pseudo_dir = './'
+  outdir='./SCRATCH/'
+  pseudo_dir = '../pseudo/'
   psfile(1) = 'Au11pw91.mt.UPF'
   single_file = .FALSE.
   ascii = .FALSE.
